# Web_Prog_Grp

./: Cargo.toml  Curl statements  README.md  README.txt  bugs.db
qn4/: main.rs
qn4/template/: assign_error.html  assign_form.html  assign_success.html
src/: auth.rs  handlers.rs  main.rs  middleware.rs  models.rs
templates/: assign.html  assign_success.html  index.html  login.html
