[package]
name = "bugtrack"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
actix-web-lab = "0.20"
dotenvy = "0.15"
once_cell = "1.19"
sha2 = "0.10"
env_logger = "0.11.8"
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }